--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
         <h3>
           <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
           <span class="octicon octicon-link"></span>
-          </a>Guilherme Kunigami.
+          </a>Guilherme Kunigami
         </h3>
 
-<p>Sofware Engineer</p>
-
+        <p>Sofware Engineer</p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
