--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
           </a>Guilherme Kunigami
         </h3>
 
-        <p>Sofware Engineer</p>
+        <h2>Sofware Engineer</h2>
+
+        <h2>Projects</h2>
+
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
