--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           </a>Guilherme Kunigami
         </h3>
 
-        <h2>Sofware Engineer</h2>
+        <p>Sofware Engineer</p>
 
-        <h2>Projects</h2>
+        <h4>Projects</h4>
 
 
     <!-- FOOTER  -->
