--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
         <p>Sofware Engineer</p>
 
+        <h4>Links</h4>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/kunigami">Linkedin</a></li>
+        </ul>
+
         <h4>Projects</h4>
 
 
