--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <h4>Links</h4>
         <ul>
-          <li><a href="https://www.linkedin.com/in/kunigami">Linkedin</a></li>
+          <li><a href="https://www.linkedin.com/in/kunigami" target="_blank">Linkedin</a></li>
         </ul>
 
         <h4>Projects</h4>
