cleaning up page. adding some configuration to enable local testing

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Home
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -16,10 +21,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kunigami">View on GitHub</a>
-
-          <h1 id="project_title">Kunigami.github.io</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">Guilherme Kunigami</h1>
+          <h2 id="project_tagline">Software Engineer</h2>
 
         </header>
     </div>
@@ -28,29 +31,15 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-          <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages">
-          <span class="octicon octicon-link"></span>
-          </a>Guilherme Kunigami
+          Links
         </h3>
 
-        <p>Sofware Engineer</p>
-
-        <h4>Links</h4>
         <ul>
-          <li><a href="https://www.linkedin.com/in/kunigami" target="_blank">Linkedin</a></li>
+          <li><a href="http://kunigami.wordpress.com/" target="_blank">Blog</a></li>
+          <li><a href="https://github.com/" target="_blank">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/kunigami" target="_blank">LinkedIn</a></li>
+          <li><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/k/Kunigami:Guilherme">Publications</a></li>
         </ul>
-
-        <h4>Projects</h4>
-
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
 
   </body>
 </html>
