fixing github link

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ title: Home
 
         <ul>
           <li><a href="http://kunigami.wordpress.com/" target="_blank">Blog</a></li>
-          <li><a href="https://github.com/" target="_blank">Github</a></li>
+          <li><a href="https://github.com/kunigami" target="_blank">Github</a></li>
           <li><a href="https://www.linkedin.com/in/kunigami" target="_blank">LinkedIn</a></li>
+          <li><a href="twitter.com/kunigami">Twitter</a></li>
           <li><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/k/Kunigami:Guilherme">Publications</a></li>
         </ul>
 
