--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: Home
         </h3>
 
         <ul>
-          <li><a href="http://kunigami.wordpress.com/" target="_blank">Blog</a></li>
+          <li><a href="http://kunigami.blog/" target="_blank">Blog</a></li>
           <li><a href="https://github.com/kunigami" target="_blank">Github</a></li>
           <li><a href="https://www.linkedin.com/in/kunigami" target="_blank">LinkedIn</a></li>
           <li><a href="twitter.com/kunigami">Twitter</a></li>
