--- a/index.html
+++ b/index.html
@@ -18,61 +18,62 @@ title: Home
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <h1 id="project_title">Guilherme Kunigami</h1>
+    <div id="all">
+      <!-- HEADER -->
+      <div id="header_wrap" class="outer">
+          <header class="inner">
+            <h1 id="project_title">Guilherme Kunigami</h1>
+
+            <p>
+              I'm a Software Engineer based on the San Francisco Bay Area,
+              currently working with web development. I like building things.
+            </p>
+          </header>
+      </div>
+
+      <!-- MAIN CONTENT -->
+      <div id="main_content_wrap" class="outer">
+        <section id="main_content" class="inner">
+
+          <h3>
+            Projects
+          </h3>
 
           <p>
-            I'm a Software Engineer based on the San Francisco Bay Area,
-            currently working with web development. I like building things.
+            Most of my projects are on
+            <a href="https://github.com/kunigami" target="_blank">Github</a>.
+            I'll eventually add some of them here.
           </p>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+          <h3>
+            Writing
+          </h3>
 
-        <h3>
-          Projects
-        </h3>
+          <p>
+            I like to write about technical subjects. I have been
+            <a href="http://kunigami.blog/" target="_blank">blogging</a> since 2009
+            (I used to blog in <a href="https://kuniga.wordpress.com/" target="_blank">Portuguese</a> until 2012).
+          </p>
 
-        <p>
-          Most of my projects are on
-          <a href="https://github.com/kunigami" target="_blank">Github</a>.
-          I'll eventually add some of them here.
-        </p>
+          <p>
+            I'm also on Twitter <a href="twitter.com/kunigami">@kunigami</a>,
+            but I don't write much there. Mostly retweeting or saving stuff to
+            read later (aka never).
+          </p>
 
-        <h3>
-          Writing
-        </h3>
+          <p>
+            Back in grad school I did research on Combinatorial Optimization and
+            <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/k/Kunigami:Guilherme">published some papers</a>.
+            I wish I could do more of it.
+          </p>
 
-        <p>
-          I like to write about technical subjects. I have been
-          <a href="http://kunigami.blog/" target="_blank">blogging</a> since 2009
-          (I used to blog in <a href="https://kuniga.wordpress.com/" target="_blank">Portuguese</a> until 2012).
-        </p>
+          <h3>
+            Misc
+          </h3>
 
-        <p>
-          I'm also on Twitter <a href="twitter.com/kunigami">@kunigami</a>,
-          but I don't write much there. Mostly retweeting or saving stuff to
-          read later (aka never).
-        </p>
-
-        <p>
-          Back in grad school I did research on Combinatorial Optimization and
-          <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/k/Kunigami:Guilherme">published some papers</a>.
-          I wish I could do more of it.
-        </p>
-
-        <h3>
-          Misc
-        </h3>
-
-        <p>
-          I have my CV on <a href="https://www.linkedin.com/in/kunigami" target="_blank">LinkedIn</a>.
-        </p>
-
+          <p>
+            I have my CV on <a href="https://www.linkedin.com/in/kunigami" target="_blank">LinkedIn</a>.
+          </p>
+      </div>
   </body>
 </html>
