--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ title: Home
             <h1 id="project_title">Guilherme Kunigami</h1>
 
             <p>
-              I'm a Software Engineer based on the San Francisco Bay Area,
+              I'm a Software Engineer based in the San Francisco Bay Area,
               currently working with web development. I like building things.
             </p>
           </header>
