--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ title: Home
 
             <p>
               I'm a Software Engineer based in the San Francisco Bay Area,
-              currently working with web development. I like building things.
+              currently working with <a href="https://www.linkedin.com/in/kunigami">web development</a>.
+              I like to learn and build things.
             </p>
           </header>
       </div>
@@ -70,14 +71,6 @@ title: Home
             Back in grad school I did research on Combinatorial Optimization and
             <a href="http://www.informatik.uni-trier.de/~ley/pers/hd/k/Kunigami:Guilherme">published some papers</a>.
             I wish I could do more of it.
-          </p>
-
-          <h3>
-            Misc
-          </h3>
-
-          <p>
-            I have my CV on <a href="https://www.linkedin.com/in/kunigami" target="_blank">LinkedIn</a>.
           </p>
       </div>
   </body>
