--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ title: Home
           </p>
 
           <p>
-            I'm also on Twitter <a href="twitter.com/kunigami">@kunigami</a>,
+            I'm also on Twitter <a href="https://twitter.com/kunigami">@kunigami</a>,
             but I don't write much there. Mostly retweeting or saving stuff to
             read later (aka never).
           </p>
