fix click speed on mobile

--- a/wordhex/index.html
+++ b/wordhex/index.html
@@ -5,6 +5,7 @@ title: Wordhex
 
 <head>
 {% include common.html %}
+<meta name="viewport" content="width=device-width, user-scalable=no">
 <script type="text/javascript" src="words6.json"></script>
 <script type="text/babel" src="app.js"></script>
 </head>
