--- a/wordhex/index.html
+++ b/wordhex/index.html
@@ -5,7 +5,7 @@ title: Wordhex
 
 <head>
 {% include common.html %}
-<meta name="viewport" content="width=device-width, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <script type="text/javascript" src="words6.json"></script>
 <script type="text/babel" src="app.js"></script>
 </head>
