--- a/wordhex/index.html
+++ b/wordhex/index.html
@@ -6,6 +6,7 @@ title: Wordhex
 <head>
 {% include common.html %}
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+<link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="words6.json"></script>
 <script type="text/babel" src="app.js"></script>
 </head>
