--- a/wanderlust/index.html
+++ b/wanderlust/index.html
@@ -31,4 +31,29 @@ title: Wanderlust
 }
 </style>
 
-<div id="app" />
+<div style="margin:0 50px 0 50px">
+    <p>
+        <a href="{{ site.url }}">kuniga.me</a> > <a href="{{ site.url }}/wanderlust">Wanderlust</a>
+    </p>
+
+    <div style="margin-top:20px">
+
+        <h1>Wanderlust</h1>
+        <p>
+            The world is full of amazing places to visit. In this page I share
+            some of the spots I'd like to visit one day or that I've visited
+            already (green marker). There are currently {total_markers} places in
+            the map.
+        </p>
+
+        <p>
+            You'll note this map is heavily skewed towards Western USA (since that's where
+            I have more opportunities to explore) and natural places (personal preference). If
+            you have other places on your wanderlust list, please let me know!
+        </p>
+
+        <p>NOTE: This page is better viewed on desktop.</p>
+
+        <div id="app" />
+    </div>
+</div>
