only include react deps in pages that need it

--- a/bulls_and_cows/index.html
+++ b/bulls_and_cows/index.html
@@ -5,6 +5,8 @@ title: MOO
 
 <head>
 {% include common.html %}
+{% include react.html %}
+
 <script type="text/javascript" src="../resources/bulls_and_cows.json"></script>
 <script type="text/babel" src="../js/bulls_and_cows/app.js"></script>
 </head>
